@@ -1,3 +1,7 @@
+2017-03-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Corrected usage of old "additionalFields" property name, resolves #9
+
 2017-03-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Corrected logic of "useColumnIndex" validator, resolves #3
